--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="icon" href="img/coin.png" type="img/icon">
+        <!-- <link rel="stylesheet" href="script.js" type="js/script"> -->
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <title>Finanças</title>
@@ -94,306 +95,7 @@
                             <ion-icon name="trash-outline"></ion-icon>
                         </td>
                     </tr>
-                    <tr>
-                        <td> Gás</td>
-                        <td> R$ 120</td>
-                        <td> Saida</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> Salario</td>
-                        <td> R$ 2000,00</td>
-                        <td> Entrada</td>
-                        <td> 24/08/2023</td>
-                        <td class="btn-actions">
-                            <ion-icon name="create-outline"></ion-icon>
-                            <ion-icon name="trash-outline"></ion-icon>
-                        </td>
-                    </tr>
+                  
                 </table>
             </div>
         </main>
