--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                         Proventos
                         <ion-icon name="arrow-up-outline"></ion-icon>
                     </h1>
-                    <p>
-                        R$ 1500,00
+                    <p class="p-number">
+                        R$ 0.00
                     </p>
                 </div>
                 <div class="content__card">
@@ -30,8 +30,8 @@
                         Gastos
                         <ion-icon name="arrow-down-outline"></ion-icon>
                     </h1>
-                    <p>
-                        R$ 1500,00
+                    <p class="g-number">
+                        R$ 0.00
                     </p>
                 </div>
                 <div class="content__card">
@@ -40,14 +40,14 @@
                         <ion-icon name="checkmark-circle"></ion-icon>
                         <ion-icon name="alert-circle"></ion-icon>
                     </h1>
-                    <p>
-                        R$ 1500,00
+                    <p class="s-number">
+                        R$ 0.00
                     </p>
                 </div>
             </section>
             <div class="content__section__desc">
                 <div class="content__desc">
-                    <input type="text" required>
+                    <input type="text" required id="desc">
                     <span>Descrição</span>
                     <i></i>
                 </div>
@@ -56,22 +56,22 @@
                         type="number"
                         step="0.01"
                         required
-                        id="Valor"
+                        id="valor"
                     >
                     <span>Valor</span>
                     <i></i>
                 </div>
                 <div class="content___desc___radio">
-                    <input type="radio" name="modalidade">
+                    <input type="radio" name="modalidade" id="r-entrada">
                     <span>
                         Entrada
                     </span>
-                    <input type="radio" name="modalidade">
+                    <input type="radio" name="modalidade" id="r-saida">
                     <span>
                         Saida
                     </span>
                 </div>
-                <button class="content___desc___button" type="submit">
+                <button class="content___desc___button" type="submit" id="btn">
                     <ion-icon name="add-circle-outline"></ion-icon>
                     Salvar
                 </button>
@@ -80,22 +80,22 @@
                 <table>
                     <tr>
                         <th>Descrição</th>
-                        <th>Valor</th>
-                        <th>Status</th>
-                        <th>Data</th>
-                        <th>Opções</th>
+                        <th class="t-valor">Valor</th>
+                        <th class="t-data">Data</th>
+                        <th class="t-status">Status</th>
+                        <th class="t-opcoes">Opções</th>
                     </tr>
                     <tr>
                         <td> Salario</td>
                         <td> R$ 2000,00</td>
-                        <td> Entrada</td>
                         <td> 24/08/2023</td>
+                        <td> Entrada</td>
                         <td class="btn-actions">
                             <ion-icon name="create-outline"></ion-icon>
                             <ion-icon name="trash-outline"></ion-icon>
                         </td>
                     </tr>
-                  
+                    <tbody></tbody>
                 </table>
             </div>
         </main>
@@ -120,4 +120,5 @@
         </div>
     </footer>
 </body>
+<script src="script.js"></script>
 </html>
