--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                     <i></i>
                 </div>
                 <div class="content___desc___radio">
-                    <input type="radio" name="modalidade" id="r-entrada">
+                    <input type="radio" name="modalidade" id="r-entrada" value="Entrada">
                     <span>
                         Entrada
                     </span>
-                    <input type="radio" name="modalidade" id="r-saida">
+                    <input type="radio" name="modalidade" id="r-entrada" value="Saida">
                     <span>
                         Saida
                     </span>
@@ -85,16 +85,19 @@
                         <th class="t-status">Status</th>
                         <th class="t-opcoes">Opções</th>
                     </tr>
-                    <tr>
+                    <!-- <tr>
                         <td> Salario</td>
                         <td> R$ 2000,00</td>
                         <td> 24/08/2023</td>
-                        <td> Entrada</td>
+                        <td class="icon-up-down">
+                            <ion-icon name="caret-up"></ion-icon>
+                            <ion-icon name="caret-down"></ion-icon>
+                        </td>
                         <td class="btn-actions">
                             <ion-icon name="create-outline"></ion-icon>
                             <ion-icon name="trash-outline"></ion-icon>
                         </td>
-                    </tr>
+                    </tr> -->
                     <tbody></tbody>
                 </table>
             </div>
