--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <!-- <link rel="stylesheet" href="script.js" type="js/script"> -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
+    <script src="https://cdn.sheetjs.com/xlsx-0.18.8/package/dist/xlsx.zahl.js"></script>
+    
+
     <title>Finanças</title>
 </head>
 
@@ -75,8 +79,9 @@
                 </button>
             </div>
         </form>
+        <button onclick="htmlTableToExcel()">Exportar para Excel</button>
         <div class="content___table">
-            <table id-="Tabela">
+            <table id="Tabela">
                 <thead>
                     <th>Descrição</th>
                     <th class="t-valor">Valor</th>
@@ -88,6 +93,7 @@
             </table>
         </div>
     </main>
+   
     <footer>
         <div class="devdu">
             DevDu 2023, © Copyright - Todos os Direitos
@@ -114,5 +120,6 @@
 </body>
 <script src="function.js"></script>
 <script src="script.js"></script>
+<script src="exportExcel.js"></script>
 
 </html>
