--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <th class="t-data">Data</th>
                     <th class="t-status">Status</th>
                     <th class="t-opcoes">Opções </th>
-                    <th><button class="btn_excel" onclick="htmlTableToExcel()"><img src="img/Excel.png" width="" height="25"></button></th>
+                    <th><button class="btn_excel" onclick="htmlTableToExcel()"><img src="img/excel-3-32.ico" width="20" height="20"></button></th>
                     
                 </thead>
             
