--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
                                     <i></i>
                                 </div>
                                 <div class="content__date">
-                                    <input id="date" name="data" type="date"
-                                        value="yyyy-MM-dd" />
+                                    <input id="date" name="data" type="date"/>
                                 </div>
                                 <div class="content___desc___radio">
                                     <div class="content__desc">
@@ -141,7 +140,7 @@
                                     <ion-icon name="logo-facebook"></ion-icon>
                                 </a>
 
-                                <a href="https://github.com/Edusanpe"
+                                <a href="https://github.com/edwnotprogrammer"
                                     target="_blank" id="git">
                                     <ion-icon name="logo-github"></ion-icon>
                                 </a>
